--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,16 @@
 body {
- background: radial-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(253, 239, 132) 0%,
+    rgb(247, 198, 169) 54.2%,
+    rgb(21, 186, 196) 100.3%
+  );
 }
 
-.logo img{
-    display: block;
-    max-width: 200px;
-    margin-bottom: 20px;
+.logo img {
+  display: block;
+  max-width: 200px;
+  margin-bottom: 20px;
 }
 
 .weather {
@@ -21,20 +26,24 @@ body {
 .search-form {
   margin-bottom: 30px;
 }
-.search-input{
+.search-input {
   color: green;
 }
 
 .btn-search {
-  color: #75695E;
-  background-color: #F6D6BD;
-  border-color: #75695E;
+  color: #75695e;
+  background-color: #f6d6bd;
+  border-color: #75695e;
 }
 
 .btn-search:hover {
-  background: radial-gradient(circle at 10% 20%, rgb(254, 255, 165) 0%, rgb(255, 232, 182) 90%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(254, 255, 165) 0%,
+    rgb(255, 232, 182) 90%
+  );
   border-color: #bae3ff;
-  color:rgba(39, 33, 66, 0.4)
+  color: rgba(39, 33, 66, 0.4);
 }
 .weather h1 {
   color: #272142;
@@ -46,26 +55,26 @@ body {
 }
 
 .temperature {
-    color: #212121;
-    font-size: 80px;
-    font-weight: 400;
-    font-weight: 700;
-    line-height: 1;
-    margin-left: -95px;
+  color: #212121;
+  font-size: 80px;
+  font-weight: 400;
+  font-weight: 700;
+  line-height: 1;
+  margin-left: -232px;
 }
 
 .unit {
-    color: #212121;
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 36px;
-    line-height: 1;
-    position: relative;
-    top: -34px;
+  color: #212121;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 36px;
+  line-height: 1;
+  position: relative;
+  top: -34px;
 }
 
 .Weather canvas {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 .weather ul {
   margin: 0;
@@ -93,25 +102,47 @@ body {
   text-align: center;
 }
 
-
 .forecast-time {
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   line-height: 20px;
   text-align: center;
   font-weight: 700;
+  margin-bottom: -10px;
 }
 
 .WeatherForecast canvas {
   display: block;
   margin: 20px auto;
 }
+
+.weather-img {
+  color: #68dad8;
+  font-size: 23px;
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 9px;
+  position: relative;
+  left: 23px;
+}
+
+.weather-img-head {
+  position: relative;
+  right: -58px;
+  font-size: 40px;
+  color: #68dad8;
+}
+
 .weatherForecastPreview {
   border: 1px solid rgb(255, 243, 116);
   padding: 10px;
   border-radius: 6px;
   margin: 0 -5px;
-  background: radial-gradient(circle at 10% 20%, rgb(254, 255, 165) 0%, rgb(255, 232, 182) 90%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(254, 255, 165) 0%,
+    rgb(255, 232, 182) 90%
+  );
 }
 .forecast-temperature {
   color: #35b4b1;
@@ -124,8 +155,8 @@ body {
 
 .forecast-temperature-min {
   color: #64cdcb (225, 60, 159, 0.4);
-      margin-left: 10px;
-    opacity: .6;
+  margin-left: 10px;
+  opacity: 0.6;
 }
 
 .weather {
@@ -140,13 +171,9 @@ body {
 .container,
 .container-md,
 .container-sm {
-  max-width: 720px;
+  max-width: 620px;
   margin: 0 auto;
   margin-top: 15px;
-}
-.App {
-  margin: 60px auto;
-  max-width: 800px;
 }
 
 footer {
@@ -156,4 +183,3 @@ footer {
   margin-top: 55px;
   text-align: center;
 }
-
