--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,15 @@ body {
   margin: 0px 0 10px;
 }
 
+.unitHumidity ,.unitWind {
+  text-transform: none;
+  color: #f65282;
+}
+
+#current-time {
+color: #f65282;
+}
+
 .temperature {
   color: #212121;
   font-size: 80px;
@@ -83,8 +92,9 @@ body {
   color: rgba(39, 33, 66, 0.4);
   font-size: 16px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 28px;
   margin-bottom: 5px;
+  text-transform: capitalize;
 }
 
 .weatherInfo ul strong {
@@ -103,7 +113,7 @@ body {
 }
 
 .forecast-time {
-  color: rgba(39, 33, 66, 0.4);
+  color: rgba(39, 33, 66, 0.4);;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
