--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@ body {
     rgb(247, 198, 169) 54.2%,
     rgb(21, 186, 196) 100.3%
   );
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .logo img {
@@ -203,7 +205,7 @@ footer {
   color: rgba(39, 33, 66, 0.4);
   font-size: 12px;
   line-height: 17px;
-  margin-top: 55px;
-  margin-bottom: -30px;
+  margin-top: 35px;
+  margin-bottom: -15px;
   text-align: center;
 }
